--- a/css/map.css
+++ b/css/map.css
@@ -130,7 +130,7 @@
 
 .fab-tilt--active {
   background: var(--color-primary);
-  color: var(--color-white);
+  color: var(--color-on-primary);
 }
 
 .fab-primary:active {
